stylesheet.css
body {
	margin:0;
	padding:0;
	background-color:black;
}
canvas {
	display:block;
	width: 100%;
	height: 100%;
}
#cubeCounter {
	box-sizing:border-box;
	margin-top:5px;
	margin-left:5px;
	position:fixed;
	border:0;
	width:auto;
	height:60px;
	z-index:2;
	padding:15px 0 15px 0;
	color:#44ABDA;
	font: 30px bold arial, sans-serif;
}

#controlHints {
	box-sizing:border-box;
	position:fixed;
	border:0;
	padding:15px;
	width:452px;
	height:60px;
	bottom:0px;
	left:50%;;
	z-index:2;
	color:#44ABDA;
	font: 15px bold arial, sans-serif;
	transform: translate(-50%,0);
	text-align:center;
}

